--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "angular": "~1.6.1",
+    "bootstrap": "~3.3.7",
+    "jquery": "~3.1.1"
+  }
 }
